--- a/engine.cfg
+++ b/engine.cfg
@@ -4,6 +4,11 @@ name="HRPG"
 main_scene="res://new_scene.scn"
 icon="icon.png"
 
+[display]
+
+stretch_mode="2d"
+stretch_aspect="keep_height"
+
 [ssl]
 
 certificates="res://ssl/ca-certificates.crt"
