--- a/engine.cfg
+++ b/engine.cfg
@@ -4,6 +4,10 @@ name="HRPG"
 main_scene="res://new_scene.scn"
 icon="icon.png"
 
+[display]
+
+width=1680
+
 [ssl]
 
 certificates="res://ssl/ca-certificates.crt"
